--- a/.github/workflows/events.yml
+++ b/.github/workflows/events.yml
@@ -17,4 +17,4 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Console Event Details
-        run: ${{toJson(github.event)}}
+        run: echo "${{toJson(github.event)}}"
