--- a/.github/workflows/events.yml
+++ b/.github/workflows/events.yml
@@ -7,8 +7,8 @@ on:
       - main
       - dev-*
       - feat/**
-    paths-ignore:
-      - ".github/**"
+    # paths-ignore:
+    #   - ".github/**"
   push:
     branches:
       - main
