--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "GitHub Actions Educational Content With Real World Project.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "jest"
+    "start": "node dist/index.js",
+    "test": "jest",
+    "build": "tsc"
   },
   "repository": {
     "type": "git",
@@ -23,6 +24,8 @@
     "express": "^4.18.2"
   },
   "devDependencies": {
-    "jest": "^29.7.0"
+    "@types/express": "^4.17.18",
+    "jest": "^29.7.0",
+    "typescript": "^5.2.2"
   }
 }
