--- a/.github/workflows/job-artifacts.yml
+++ b/.github/workflows/job-artifacts.yml
@@ -27,3 +27,13 @@ jobs:
         with:
           name: dist-files
           path: dist
+  deploy:
+    runs-on: ubuntu-latest
+    needs: [build]
+    steps:
+      - name: Download the Code
+        uses: actions/download-artifact@v3
+        with:
+          name: dist-files
+      - name: Display the Download
+        run: ls -al
