--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "node dist/index.js",
     "test": "jest",
-    "build": "tsc"
+    "build": "tsc",
+    "dev": "nodemon src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -21,11 +22,18 @@
   "homepage": "https://github.com/ovichowdhury/gh-actions#readme",
   "dependencies": {
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.6.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.18",
+    "@types/jest": "^29.5.5",
+    "@types/supertest": "^2.0.14",
     "jest": "^29.7.0",
+    "nodemon": "^3.0.1",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
+    "ts-node": "^10.9.1",
     "typescript": "^5.2.2"
   }
 }
