--- a/.github/workflows/ec2-deploy.yml
+++ b/.github/workflows/ec2-deploy.yml
@@ -19,3 +19,5 @@ jobs:
         run: npm run build
       - name: Start the Server
         run: pm2 restart app
+      - name: Persist env variable
+        run: echo "MONGODB_URI=$MONGODB_URI" >> /etc/environment
