test: checking pwd for self runner

--- a/.github/workflows/ec2-deploy.yml
+++ b/.github/workflows/ec2-deploy.yml
@@ -19,5 +19,5 @@ jobs:
         run: npm run build
       - name: Start the Server
         run: pm2 restart app
-      - name: Persist env variable
-        run: sudo echo "MONGODB_URI=$MONGODB_URI" >> /etc/environment
+      - name: Persist Env Variable
+        run: pwd
