--- a/.github/workflows/ec2-deploy.yml
+++ b/.github/workflows/ec2-deploy.yml
@@ -20,4 +20,4 @@ jobs:
       - name: Start the Server
         run: pm2 restart app
       - name: Persist Env Variable
-        run: echo "MONGODB_URI=$MONGODB_URI" >> .env.local
+        run: echo "MONGODB_URI=$MONGODB_URI" >> .env
