--- a/.github/workflows/execution-flow.yml
+++ b/.github/workflows/execution-flow.yml
@@ -13,6 +13,12 @@ jobs:
       matrix:
         node-version: [14, 16, 18]
         os: [ubuntu-latest, windows-latest]
+        include:
+          - node-version: 20
+            os: ubuntu-latest
+        exclude:
+          - node-version: 14
+            os: windows-latest
     runs-on: ${{ matrix.os }}
     steps:
       - name: Get the Code
