--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node dist/index.js",
+    "start:debug": "node --inspect dist/index.js",
     "test": "jest",
     "build": "tsc",
     "dev": "nodemon src/index.ts"
